<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="base.engineering.motosumiyoshi.volleymanageapp.MainActivity">

    <ImageView
        android:id="@+id/top_image"
        android:layout_width="390dp"
        android:layout_height="163dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/t1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/top_image"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_surface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@+id/newsRecyclerView"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:text="@string/top_menu_button_join"
                tools:ignore="MissingConstraints" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:text="@string/top_menu_button_joined"
                app:layout_constraintBottom_toTopOf="@+id/button6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:text="@string/top_menu_button_pay"
                tools:ignore="MissingConstraints" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:text="@string/top_menu_button_qa"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/partners" />

</androidx.constraintlayout.widget.ConstraintLayout>